# talk_to_lollms

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
talk_to_lollms/: main.py
